# NCBI-Database-MCP

./: .env.example  .gitignore  .mcp.json  Dockerfile  Dockerfile.dev  README.md  SECURITY.md  blast_server.js  cline_mcp_config.json  create_formal_document.py  create_test_doc.py  debug_coords.py  debug_gene.py  debug_gene_full.py  debug_multiple_versions.py  debug_osdr_curl.sh  debug_osdr_organism.py  echo_server.py  high_performance_blast_server.js  mcp_v1_blast_server.py  online_blast_server.js  package-lock.json  package.json  pyproject.toml  requirements.txt  run_fastmcp_gene_server.sh  run_gene_server.sh  run_gene_server_final.sh  run_gene_server_v2.sh  run_gene_server_v2_updated.sh  run_simple_gene_server.sh  run_working_gene_server.sh  simulate_claude_code.py  stable_online_blast_server.js  test_claude_code_latest.py  test_claude_code_mcp.py  test_complete_sequence.py  test_fastmcp_gene.py  test_final_server.py  test_fixed_osdr.py  (+14 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_tool.yml
WordDocuments/: AI감상문.docx  test.docx  감상문1.docx  감상문2.docx  감상문_AI강연.docx
src/: async_extensions.py  blast_with_queue.py  fastmcp_blast_server.py  fastmcp_gene_server.py  gene_server_final.py  gene_server_v2.py  gene_to_genomic_server.py  main.py  server.py  server_standalone.py  simple_blast_server.py  simple_gene_server.py  working_blast_server.py  working_gene_server.py
