[project]
name = "bio-mcp-blast"
version = "0.1.0"
description = "MCP server for NCBI BLAST sequence alignment"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Bio-MCP Project"}]
license = {text = "MIT"}

dependencies = [
    "mcp>=1.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]